--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,17 +6,17 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:32769/realms/ticketera
+          issuer-uri: ${KEYCLOAK_REALM_URI:http://localhost:8080/realms/ticketera}
   cloud:
     gateway:
       routes:
         - id: events-api
-          uri: http://localhost:8082
+          uri: ${EVENTS_API_URI:http://localhost:8082}
           predicates:
             - Path=/ticketera/**
 
-logging:
-  level:
-    org.springframework.cloud.gateway: DEBUG
-    org.springframework.security: DEBUG
-
+#logging:
+#  level:
+#    org.springframework.cloud.gateway: DEBUG
+#    org.springframework.security: DEBUG
+#
