added cors configuration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,10 @@ spring:
           predicates:
             - Path=/ticketera/**
 
+events-gateway:
+    allowed-origins:
+      - http://localhost:5173
+
 #logging:
 #  level:
 #    org.springframework.cloud.gateway: DEBUG
