--- a/.github/workflows/docker-git-punblish.yml
+++ b/.github/workflows/docker-git-punblish.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: leandrodalbo/event-api
+  IMAGE_NAME: leandrodalbo/event-gateway
   VERSION: latest
 
 jobs:
