--- a/.github/workflows/docker-git-punblish.yml
+++ b/.github/workflows/docker-git-punblish.yml
@@ -23,6 +23,15 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
 
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: 21
+          distribution: temurin
+
+      - name: Build JAR
+        run: ./gradlew clean build test --no-daemon
+
       - name: Log into container registry
         uses: docker/login-action@v3
         with:
