--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,13 +10,6 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: keycloak-auth
-          uri: ${KEYCLOAK_URI:http://localhost:8080}
-          predicates:
-            - Path=/auth/**
-          filters:
-            - StripPrefix=1
-
         - id: public-ticketera-api
           uri: ${EVENTS_API_URI:http://localhost:8082}
           predicates:
@@ -33,8 +26,13 @@ spring:
 
 
 events-gateway:
-    allowed-origins:
-      - ${ALLOWED_ORIGINS:http://localhost:5173}
+  allowed-origins:
+    - ${ALLOWED_ORIGIN_1:http://localhost:5173}
+    - ${ALLOWED_ORIGIN_2:http://localhost:5173}
+    - ${ALLOWED_ORIGIN_3:http://localhost:5173}
+    - ${ALLOWED_ORIGIN_4:http://localhost:5173}
+    - ${ALLOWED_ORIGIN_5:http://localhost:5173}
+    - ${ALLOWED_ORIGIN_6:http://localhost:5173}
 
 #logging:
 #  level:
