--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,12 +29,12 @@ spring:
 
 events-gateway:
   allowed-origins:
-    - ${ALLOWED_ORIGIN_1:http://localhost:5173}
-    - ${ALLOWED_ORIGIN_2:http://localhost:5173}
-    - ${ALLOWED_ORIGIN_3:http://localhost:5173}
-    - ${ALLOWED_ORIGIN_4:http://localhost:5173}
-    - ${ALLOWED_ORIGIN_5:http://localhost:5173}
-    - ${ALLOWED_ORIGIN_6:http://localhost:5173}
+    - http://localhost:5173
+    - ${ALLOWED_ORIGIN_2}
+    - ${ALLOWED_ORIGIN_3}
+    - ${ALLOWED_ORIGIN_4}
+    - ${ALLOWED_ORIGIN_5}
+    - ${ALLOWED_ORIGIN_6:}
 
 #logging:
 #  level:
